<resources>
    <string name="app_name">ChristmasApp</string>

    <string name="scale_c">C</string>
    <string name="scale_d_flat">Db</string>
    <string name="scale_d">D</string>
    <string name="scale_e_flat">Eb</string>
    <string name="scale_e">E</string>
    <string name="scale_f">F</string>
    <string name="scale_g_flat">Gb</string>
    <string name="scale_g">G</string>
    <string name="scale_a_flat">Ab</string>
    <string name="scale_a">A</string>
    <string name="scale_h_flat">Hb</string>
    <string name="scale_h">H</string>
</resources>
